ctui-components/src/snapshots/ctui_components__modal__tests__modal_basic.snap
---
source: ctui-components/src/modal.rs
expression: result
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
               ┌ Confirmation ────┐               
               │                  │               
               │Are you sure you w│               
               │                  │               
               │    [ Close ]     │               
               └──────────────────┘
