ctui-components/src/snapshots/ctui_components__modal__tests__modal_multiline.snap
---
source: ctui-components/src/modal.rs
expression: result
---
                                                            
                                                            
                                                            
       ┌ About ────────────────────────────────────┐        
       │                                           │        
       │This is a multi-line                       │        
       │modal dialog example                       │        
       │with three lines of text.                  │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                                           │        
       │                  [ OK ]                   │        
       └───────────────────────────────────────────┘
