ctui-components/src/snapshots/ctui_components__modal__tests__modal_multiple_buttons.snap
---
source: ctui-components/src/modal.rs
expression: result
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
               ┌ Delete Item ───────────────┐               
               │                            │               
               │This action cannot be undone│               
               │                            │               
               │                            │               
               │                            │               
               │                            │               
               │                            │               
               │                            │               
               │                            │               
               │   [ Cancel ]  [ Delete ]   │               
               └────────────────────────────┘
