ctui-components/src/snapshots/ctui_components__modal__tests__modal_no_title.snap
---
source: ctui-components/src/modal.rs
expression: result
---
                                        
                                        
                                        
                                        
                                        
          ┌──────────────────┐          
          │                  │          
          │                  │          
          │    [ Close ]     │          
          └──────────────────┘
